Index, About, Ayurveda

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -49,7 +49,7 @@
                             <li>
                                 <div class="single-checkbox">
                                     <input type="radio" name="check-box" id="check2">
-                                    <label for="check2"><span></span>Doctor</label>    
+                                    <label for="check2"><span></span>Doctor</label>
                                 </div>
                             </li>
                             <li>
@@ -161,7 +161,7 @@
                                 <div class="pattern-2" style="background-image: url(assets/images/shape/shape-46.png);">
                                 </div>
                             </div>
-                            <figure class="icon-box"><img class="our-product" src="{% static '/img_new/personal.jpg' %}"
+                            <figure class="icon-box"><img class="our-product" src="{% static '/img_new/personal.JPG' %}"
                                     alt=""></figure>
                             <h3><a href="#">PERSON CARE </a></h3>
                             <!-- <div class="link"><a href="#"><i class="icon-Arrow-Right"></i></a></div>
