--- a/app/templates/app/whatisAyurveda.html
+++ b/app/templates/app/whatisAyurveda.html
@@ -39,7 +39,7 @@
             <br>
 
             <div class="content_block_1">
-                <div class="content-box">
+                <div class="content-box" style="margin-left:10px; margin-right:10px;">
                     <div class="sec-title">
                         <h2>A Beginner’s Guide to the World of Ayurveda</h2>
                         <br>
