--- a/app/templates/app/about-element-1.html
+++ b/app/templates/app/about-element-1.html
@@ -39,7 +39,7 @@
             <br>
 
             <div class="content_block_1">
-                <div class="content-box">
+                <div class="content-box" style="margin-left:10px; margin-right:10px;">
                     <div class="sec-title">
                         <p>About Aayur Tree</p>
                             <!-- <h2>Bring care to your home with one click</h2> -->
@@ -75,7 +75,7 @@
                         </p>
                     </div>
                     <br>
-                   
+
 
 
                 </div>
