--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -192,7 +192,7 @@
                                         style="background-image: url(assets/images/shape/shape-46.png);"></div>
                                 </div>
                                 <figure class="icon-box"><img class="our-product"
-                                        src="{% static '/img_new/herb-island-1.png' %}" alt="">
+                                        src="{% static '/img_new/herb-island-resize.png' %}" alt="">
                                 </figure>
                                 <h3><a href="#">HERB ISLAND </a></h3>
 
@@ -210,7 +210,7 @@
                                         style="background-image: url(assets/images/shape/shape-46.png);"></div>
                                 </div>
                                 <figure class="icon-box"><img class="our-product"
-                                        src="{% static '/img_new/raw-element-1.png' %}" alt=""></figure>
+                                        src="{% static '/img_new/raw-element-resize.png' %}" alt=""></figure>
                                 <h3><a href="#">RAW ELEMENTZ </a></h3>
                                 <!-- <div class="link"><a href="#"><i class="icon-Arrow-Right"></i></a></div>
                                 <div class="btn-box"><a href="#" class="theme-btn-one">View Item<i class="icon-Arrow-Right"></i></a></div> -->
@@ -228,7 +228,7 @@
                                         style="background-image: url(assets/images/shape/shape-46.png);"></div>
                                 </div>
                                 <figure class="icon-box"><img class="our-product"
-                                        src="{% static '/img_new/vedhas-natural-1.png' %}" alt=""></figure>
+                                        src="{% static '/img_new/vedas-natural-resize.png' %}" alt=""></figure>
                                 <h3><a href="#">VEDHAS</a></h3>
                                 <!-- <div class="link"><a href="#"><i class="icon-Arrow-Right"></i></a></div>
                                 <div class="btn-box"><a href="#" class="theme-btn-one">View Item<i class="icon-Arrow-Right"></i></a></div> -->
@@ -247,7 +247,7 @@
                                         style="background-image: url(assets/images/shape/shape-46.png);"></div>
                                 </div>
                                 <figure class="icon-box"><img class="our-product"
-                                        src="{% static '/img_new/Duh Registered Logo.png' %}" alt="">
+                                        src="{% static '/img_new/DUH-resize.png' %}" alt="">
                                 </figure>
                                 <h3><a href="#">DUH</a></h3>
 
