cat-image-resize

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -109,7 +109,7 @@
                                 <div class="pattern-2" style="background-image: url(assets/images/shape/shape-46.png);">
                                 </div>
                             </div>
-                            <figure class="icon-box"><img class="our-product" src="{% static '/img_new/3.jpg' %}"
+                            <figure class="icon-box"><img class="our-product" src="{% static '/img_new/3-resize.jpg' %}"
                                     alt=""></figure>
                             <h3><a href="#">SKIN CARE</a></h3>
 
@@ -126,8 +126,8 @@
                                 <div class="pattern-2" style="background-image: url(assets/images/shape/shape-46.png);">
                                 </div>
                             </div>
-                            <figure class="icon-box"><img class="our-product" src="{% static '/img_new/item8.jpg' %}"
-                                    alt=""></figure>
+                            <figure class="icon-box"><img class="our-product"
+                                    src="{% static '/img_new/item8-resize.jpg' %}" alt=""></figure>
                             <h3><a href="#">HAIR CARE </a></h3>
 
                         </div>
@@ -143,8 +143,8 @@
                                 <div class="pattern-2" style="background-image: url(assets/images/shape/shape-46.png);">
                                 </div>
                             </div>
-                            <figure class="icon-box"><img class="our-product" src="{% static '/img_new/item3.jpg' %}"
-                                    alt=""></figure>
+                            <figure class="icon-box"><img class="our-product"
+                                    src="{% static '/img_new/item3-resize.jpg' %}" alt=""></figure>
                             <h3><a href="#">BODY CARE </a></h3>
                             <!-- <div class="link"><a href="#"><i class="icon-Arrow-Right"></i></a></div>
                                 <div class="btn-box"><a href="#" class="theme-btn-one">View Item<i class="icon-Arrow-Right"></i></a></div> -->
@@ -161,8 +161,8 @@
                                 <div class="pattern-2" style="background-image: url(assets/images/shape/shape-46.png);">
                                 </div>
                             </div>
-                            <figure class="icon-box"><img class="our-product" src="{% static '/img_new/personal.JPG' %}"
-                                    alt=""></figure>
+                            <figure class="icon-box"><img class="our-product"
+                                    src="{% static '/img_new/personal-resize.JPG' %}" alt=""></figure>
                             <h3><a href="#">PERSON CARE </a></h3>
                             <!-- <div class="link"><a href="#"><i class="icon-Arrow-Right"></i></a></div>
                                 <div class="btn-box"><a href="#" class="theme-btn-one">View Item<i class="icon-Arrow-Right"></i></a></div> -->
