--- a/app/templates/app/privacy.html
+++ b/app/templates/app/privacy.html
@@ -28,7 +28,7 @@
 
 
             <div class="content_block_1">
-                <div class="content-box">
+                <div class="content-box" style="margin-left:10px; margin-right:10px;">
                     <div class="sec-title">
                         <p>Effective Date: March 25, 2021</p>
                         <h3><b>1. GENERAL</b></h2>
