minor-fix in base.html

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -7,6 +7,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
     <title>AAyurtree</title>
@@ -189,7 +190,7 @@
                                         <li><br></li>
 
                                         <li id="becomeseller">
-                                            
+
                                             <a href="{% url 'becomesellerpage' %}" class="theme-btn-one"><i
                                                     class="icon-image"></i>Become a Seller</a>
                                         </li>
@@ -424,13 +425,13 @@
     </div>
 
 
-    <!-- jequery plugins -->
+    <!-- jquery plugins -->
     <script src="{% static '/app/assets/js/jquery.js' %}"></script>
     <script src="{% static '/app/assets/js/popper.min.js' %}"></script>
     <script src="{% static '/app/assets/js/bootstrap.min.js' %}"></script>
     <script src="{% static '/app/assets/js/owl.js' %}"></script>
     <script src="{% static '/app/assets/js/wow.js' %}"></script>
-    <script src="{% static '/app/assets/js/validation.js' %"></script>
+    <script src="{% static '/app/assets/js/validation.js' %}"></script>
     <script src="{% static '/app/assets/js/jquery.fancybox.js' %}"></script>
     <script src="{% static '/app/assets/js/appear.js' %}"></script>
     <script src="{% static '/app/assets/js/scrollbar.js' %}"></script>
